@@ -1,4 +1,5 @@
 6.0
+	+ Use /etc/apt/auth.conf instead of embedding login info in sources.list
 	+ Avoid use of apt-key add installing zentyal-qa pubkey in /etc/apt/trusted.gpg.d
 	  as gnupg is no longer installed as dependency
 	+ Login page form is now centered in a responsive way
